fix: italian mod

--- a/src/app/home/homepage/homepage.component.html
+++ b/src/app/home/homepage/homepage.component.html
@@ -8,7 +8,9 @@
     </div>
 <div class="carousel-inner">  
   <div class="carousel-item active">
+    <a href="/italian/image">
     <img src="../../assets/image/italian.jpg" class="d-block w-100" alt="First Slide">
+    </a>
     <div class="carousel-caption d-none d-md-block">
       <h1>Italian</h1>
       <p>Savor the taste of Italy, one delicious bite at a time.</p>
