--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -9,7 +9,7 @@
                 <ul class="nav-menu" id="nav-menu">
                     <li><a href ="/home/homepage"> HOME </a></li>
                     <li><a href ="/about/profile"> ABOUT </a></li>
-                    <li><a href ="/auth/recipe"> 5 MIN RECIPE </a></li>
+                    <li><a href ="/recipe/mins"> 5 MIN RECIPE </a></li>
                     <li><a href ="#"> CONTACT </a></li>
                 </ul>
 
