--- a/src/app/chinese/image/image.component.html
+++ b/src/app/chinese/image/image.component.html
@@ -1,4 +1,4 @@
-<div class="body"></div>
+<div class="body">
     <h1>Chinese Cuisine</h1>
 <div class="gallery">
     <div class="image-frame">
@@ -92,4 +92,5 @@
     </a>
     </div>
 </div>
+
 
