--- a/src/app/italian/image/image.component.html
+++ b/src/app/italian/image/image.component.html
@@ -1,4 +1,4 @@
-<div class="body"></div>
+<div class="body">
     <h1>Italian Cuisines</h1>
 <div class="gallery">
     <div class="image-frame">
@@ -91,4 +91,5 @@
         <div class="image-caption">vermicelli</div>
     </a>
     </div>
+</div>
 </div>
