--- a/src/app/mexican/image/image.component.html
+++ b/src/app/mexican/image/image.component.html
@@ -1,4 +1,4 @@
-<div class="body"></div>
+<div class="body">
     <h1>Mexican Cuisine</h1>
 <div class="gallery">
     <div class="image-frame">
@@ -92,5 +92,5 @@
     </a>
     </div>
 </div>
-
+</div>
 
