--- a/src/app/auth/signin/signin.component.css
+++ b/src/app/auth/signin/signin.component.css
@@ -4,8 +4,15 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: linear-gradient(135deg, #74ebd5 0%, #acb6e5 100%);
-    font-family: 'Arial', sans-serif;
+    /* background: linear-gradient(135deg, #74ebd5 0%, #acb6e5 100%); */
+    /* font-family: 'Arial', sans-serif; */
+    background-image: url('../../../assets/image/back.jpg');
+    background-repeat: no-repeat;
+    background-size: cover; /* Ensures the image covers the full background */
+    background-position: center;
+    padding: 20px;
+    margin: 0;
+    
   }
   
   /* Form Container */
