--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -10,7 +10,7 @@
                     <li><a href ="/home/homepage"> HOME </a></li>
                     <li><a href ="/about/profile"> ABOUT </a></li>
                     <li><a href ="/recipe/mins"> 5 MIN RECIPE </a></li>
-                    <li><a href ="#"> CONTACT </a></li>
+                    <li><a href ="/about/contact"> CONTACT </a></li>
                     <li><a href ="/auth/sigup"> SIGNUP </a></li>
                     <li><a href ="/auth/signin"> SIGNIN </a></li>
                 </ul>
