--- a/src/app/chinese/image/image.component.html
+++ b/src/app/chinese/image/image.component.html
@@ -20,7 +20,7 @@
         </a>
     </div>
     <div class="image-frame">
-        <a href="/chinese/chongquingspicy-noodle">
+        <a href="/chinese/chongquigspicy-noodle">
         <img src="../../../assets/image/chongquing noodles.jpg" alt="Chongquing Noodles">
         <div class="image-caption">Chongquing Noodles</div>
     </a>
@@ -80,7 +80,7 @@
     </a>
     </div>
     <div class="image-frame">
-        <a href="/chinese/wonton-sopu">
+        <a href="/chinese/wonton-soup">
         <img src="../../../assets/image/wonton soup.jpg" alt="Wonton Soup">
         <div class="image-caption">Wonton Soup</div>
         </a>
