--- a/src/app/mexican/margaritapie-dessert/margaritapie-dessert.component.html
+++ b/src/app/mexican/margaritapie-dessert/margaritapie-dessert.component.html
@@ -1,4 +1,4 @@
-<div class="recipe"></div>
+<div class="recipe">
     <h1>Margarita Pie</h1>
     <p><strong>Margarita Pie</strong> is a creamy and refreshing dessert inspired by the classic margarita cocktail. It combines tangy lime and a hint of tequila in a smooth filling, perfect for a summer treat. Here’s a recipe for making Margarita Pie in a Mexican style.</p>
 
@@ -73,3 +73,4 @@
             <li><strong>Chilling Time:</strong> Make sure to allow enough time for the pie to chill so that it firms up properly.</li>
         </ul>
     </div>
+</div>
