--- a/src/app/mexican/mexicanchickentorilla-soup/mexicanchickentorilla-soup.component.html
+++ b/src/app/mexican/mexicanchickentorilla-soup/mexicanchickentorilla-soup.component.html
@@ -1,4 +1,4 @@
-<div class="recipe"></div>
+<div class="recipe">
     <h1>Mexican Chicken Tortilla Stew (Sopa de Tortilla)</h1>
     <p>Mexican Chicken Tortilla Stew (Sopa de Tortilla) is a hearty and flavorful soup featuring chicken, tomatoes, and crispy tortilla strips. It’s a comforting dish with layers of flavor, typically garnished with avocado, cheese, and sour cream.</p>
 
@@ -80,3 +80,4 @@
             <li><strong>Adjust heat:</strong> If you like your stew spicier, add more chili powder or sliced jalapeños.</li>
         </ul>
     </div>
+</div>
