--- a/src/app/mexican/pozolerojo-soup/pozolerojo-soup.component.html
+++ b/src/app/mexican/pozolerojo-soup/pozolerojo-soup.component.html
@@ -1,4 +1,4 @@
-<div class="recipe"></div>
+<div class="recipe">
     <h1>Pozole Rojo</h1>
     <p>Pozole Rojo is a traditional Mexican stew made with hominy, pork, and a rich red chili sauce. It’s a hearty and comforting dish, often enjoyed during special occasions and celebrations.</p>
 
@@ -87,3 +87,4 @@
             <li><strong>Pork:</strong> You can use a combination of pork shoulder and ribs for added flavor and texture.</li>
         </ul>
     </div>
+</div>
