--- a/src/app/mexican/treslechescake-dessert/treslechescake-dessert.component.html
+++ b/src/app/mexican/treslechescake-dessert/treslechescake-dessert.component.html
@@ -1,4 +1,4 @@
-<div class="recipe"></div>
+<div class="recipe">
     <h1>Tres Leches Cake</h1>
     <p><strong>Tres Leches Cake</strong> is a classic Mexican dessert made by soaking a sponge cake in three different kinds of milk, giving it an incredibly moist and rich texture. This cake is perfect for any celebration. Here’s how to make it.</p>
 
@@ -77,3 +77,4 @@
             <li><strong>Whipping Cream:</strong> For a lighter topping, you can also add a bit of cream cheese to the whipped cream.</li>
         </ul>
     </div>
+</div>
